# next-jirozon

./: Makefile  README.md  package.json  pnpm-lock.yaml
backend/buta/: buta.json  buta_pb.py  buta_pb_grpc.py  main.py
backend/men/: Gemfile  men_pb.rb  men_services_pb.rb  server.rb
backend/yasai/: Cargo.toml  build.rs  main.rs  yasai.json
messages/: en.json
proto/: abura.proto  buta.proto  history.proto  men.proto  ninniku.proto  review.proto  soup.proto  tenpoRecommend.proto  yasai.proto
src/app/(store)/: page.tsx
src/app/(store)/@modal/(.)cart-overlay/: page.tsx
src/app/(store)/category/[slug]/: page.tsx
src/app/(store)/product/[slug]/: page.tsx
src/app/api/historyDetails/: route.ts
src/app/api/productDetails/: route.ts
src/app/api/reviewDetails/: route.ts
src/app/api/tenpoRecommendationDetails/: route.ts
src/ui/: Histories.tsx  ProductInformation.tsx  ProductOptionsAndAdd.tsx  TenpoRecommendation.tsx  UserReviews.tsx  add-to-cart-button.tsx
src/ui/checkout/: stripe-payment.tsx
src/ui/footer/: footer.tsx
src/ui/nav/: nav.tsx
src/ui/products/: product-list.tsx
