[package]
name = "grpc-web-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.11.0"
bytes = "1.2.1"
prost = "0.12.3"
prost-derive = "0.12.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[build-dependencies]
tonic-build = "0.11.0"
